--- a/style/style.css
+++ b/style/style.css
@@ -91,6 +91,7 @@ body {
   padding: 10px;
   margin: 20px 0;
   border-radius: 20px;
+  box-shadow: 0px 0px 20px rgba(14, 14, 14, 0.4509803922);
 }
 
 .details-row > * + * {
@@ -138,4 +139,63 @@ body {
 }
 .ThreeHoursWeather .ThreeHoursTime {
   color: #7c7c7c;
+}
+
+/*favoris*/
+.fa-star {
+  font-size: 15px;
+  cursor: pointer;
+  vertical-align: top;
+  padding: 10px 0 10px 10px;
+}
+
+.fa-regular.fa-star:hover {
+  color: rgb(255, 187, 0);
+}
+
+.fa-solid.fa-star {
+  color: rgb(255, 187, 0);
+}
+
+/*Menu burger*/
+.navbar-toggler {
+  border: none;
+}
+
+.navbar-toggler-icon {
+  background-image: url("https://cdn-icons-png.flaticon.com/512/4846/4846616.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 24px;
+  height: 24px;
+}
+
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-toggler {
+    display: block;
+  }
+}
+.offcanvas {
+  background-color: #000;
+}
+
+.btn-close {
+  filter: invert(1) grayscale(100%) brightness(200%);
+}
+
+.navbar-nav {
+  display: block;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.navbar-dark .navbar-toggler:hover {
+  color: #fff;
+}
+
+.navbar-dark .navbar-toggler:focus, .navbar-dark .navbar-toggler {
+  color: transparent;
 }/*# sourceMappingURL=style.css.map */
