Weather Site almost v2

--- a/style/style.css
+++ b/style/style.css
@@ -157,7 +157,20 @@ body {
   color: rgb(255, 187, 0);
 }
 
-/*Menu burger*/
+/*Navbar + menu latéral*/
+.navbar-brand h1 {
+  letter-spacing: 3px;
+  font-size: 30px;
+  font-weight: 900;
+}
+.navbar-brand a {
+  font-weight: 300;
+  color: #898989 !important;
+}
+.navbar-brand a:hover {
+  color: #ffffff !important;
+}
+
 .navbar-toggler {
   border: none;
 }
@@ -170,11 +183,6 @@ body {
   height: 24px;
 }
 
-@media (min-width: 992px) {
-  .navbar-expand-lg .navbar-toggler {
-    display: block;
-  }
-}
 .offcanvas {
   background-color: #000;
 }
@@ -188,8 +196,37 @@ body {
 }
 
 .navbar-dark .navbar-nav .nav-link {
-  font-size: 30px;
   cursor: pointer;
+}
+
+.nav-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav-item a {
+  width: 100%;
+  font-size: 22px;
+}
+.nav-item i {
+  font-size: 18px;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.2s ease;
+  cursor: pointer;
+  padding: 10px;
+  color: rgb(255, 255, 255);
+}
+.nav-item i:hover {
+  color: rgb(255, 0, 0);
+}
+
+.nav-item:hover i {
+  visibility: visible;
+  opacity: 0.75;
+}
+.nav-item:hover a {
+  color: rgba(255, 255, 255, 0.75) !important;
 }
 
 .navbar-dark .navbar-toggler:hover {
@@ -198,4 +235,17 @@ body {
 
 .navbar-dark .navbar-toggler:focus, .navbar-dark .navbar-toggler {
   color: transparent;
+}
+
+/*Medias queries*/
+@media (max-width: 991px) {
+  .nav-item i {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-toggler {
+    display: block;
+  }
 }/*# sourceMappingURL=style.css.map */
