Ajout des données de précipiation

--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 /*Variables*/
 /*Main*/
+html {
+  font-size: 16px;
+}
+
 body {
   font-family: "Josefin Sans", sans-serif;
   background: rgb(34, 34, 34);
@@ -17,7 +21,7 @@ body {
 
 /*Formulaire*/
 .city-form {
-  margin: 40px 0;
+  margin: 2.5rem 0;
 }
 .city-form input {
   color: #fff;
@@ -51,11 +55,11 @@ body {
   align-items: center;
   display: flex;
   justify-content: space-between;
-  margin: 15px 0 0 0;
+  margin: 1rem 0 0 0;
 }
 
 .main-temperature {
-  font-size: 4rem;
+  font-size: 3.75rem;
   font-weight: 600;
 }
 
@@ -78,12 +82,12 @@ body {
   flex-direction: column;
   height: 100%;
   text-align: center;
-  margin: 15px 0 0 0;
+  margin: 1rem 0 0 0;
 }
 
 .refresh {
   padding: 5px 10px;
-  margin: 30px 0 0 0;
+  margin: 2rem 0 0 0;
   border: 2px solid rgb(250, 250, 250);
   border-radius: 20px;
 }
@@ -97,7 +101,7 @@ body {
 .details-row {
   background: rgb(50, 50, 50);
   padding: 10px;
-  margin: 20px 0;
+  margin: 1.5rem 0;
   border-radius: 20px;
   box-shadow: 0px 0px 20px rgba(14, 14, 14, 0.4509803922);
 }
@@ -140,13 +144,17 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 15px;
+  padding: 1rem;
+  min-width: 90px;
 }
 .ThreeHoursWeather img {
-  width: 50px;
+  width: 90px;
 }
 .ThreeHoursWeather .ThreeHoursTime {
   color: #7c7c7c;
+}
+.ThreeHoursWeather .fa-cloud-showers-heavy {
+  font-size: 0.75rem;
 }
 
 /*favoris*/
@@ -255,5 +263,11 @@ body {
   }
   .nav-item:hover a {
     color: rgba(255, 255, 255, 0.75) !important;
+  }
+  .city {
+    font-size: 2.5rem;
+  }
+  .description {
+    font-size: 1.5rem;
   }
 }/*# sourceMappingURL=style.css.map */
